--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -61,9 +61,17 @@ image::hardware_connection.png[]
 
 The Intel NUC, AMR and TM robot are all connected to the ethernet switching hub via ethernet cable. *Ensure that the 3 machines are able to communicate with each other on the same subnet, e.g. 192.168.1.x with subnet mask 255.255.255.0.*
 
-=== Set Up Host Machine
+=== ROS2 Across Multiple Machines
+The `omron_moma` package has been designed to run across 2 machine; the host machine, which runs the nodes for communication with the TM robot and the AMR, as well as the remote machine, which runs the high level scripts/clients to execute jobs on the MoMa. 
 
-// The host machine is used to run the python scripts which use both the TM Drivers and the ROS 2 packages to communicate with the TM robot. Ensure that your machine meets the requirements in <<prerequisites>>.
+To set up ROS2 across the host and remote machine, ensure that both the remote machine and host machine are on the same subnet and are discoverable to each other.
+
+*Also ensure that the ROS_DOMAIN_ID of both devices are the same.*
+
+
+=== Set Up Host Machine
+The host machine is used to run the nodes which enable communication with the TM robot via tcp and modbus communication.
+It is also used to communicate with the AMR via the ARCL interface in order to retrieve vital information about the AMR that is used for this package to work.
 
 // ==== IP Address
 // Ensure that the ip address of the host machine and the TM robot(<<TM System/Network Setup>>) have the same subnet. Instructions on how to change the static ip address in Ubuntu 20.04 can be found link:https://www.linuxtechi.com/assign-static-ip-address-ubuntu-20-04-lts/#:~:text=Assign%20Static%20IP%20Address%20on%20Ubuntu%2020.04%20LTS%20Desktop&text=Login%20to%20your%20desktop%20environment,and%20then%20choose%20wired%20settings.&text=In%20the%20next%20window%2C%20Choose,gateway%20and%20DNS%20Server%20IP.[here]
